# kata-bank-rust

./: .env  Cargo.toml
migrations/: 20250212103854_init_schema.sql
src/: main.rs
src/application/: error.rs  mod.rs  resource.rs
src/domain/: bank_account.rs  mod.rs  port.rs  use_case.rs
src/infrastructure/: repository.rs
