[package]
name = "bank_account_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
axum = { version = "0.8.3", features = ["macros", "http2"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "chrono", "bigdecimal"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "1.13.1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.86"
